--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.12.1
+  firebase_core: ^2.21.0
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
