--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.12.1
   firebase_core: ^2.21.0
@@ -40,9 +41,11 @@ dependencies:
   injectable: ^2.3.2
 
 dev_dependencies:
+  build_runner: ^2.4.6
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
