--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -38,7 +38,9 @@ dependencies:
   get: ^4.6.6
   get_it: ^7.6.4
   google_fonts: ^6.1.0
+  google_maps_flutter: ^2.5.0
   injectable: ^2.3.2
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   build_runner: ^2.4.6
