--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
+  firebase_app_check: ^0.2.1+4
   firebase_auth: ^4.12.1
   firebase_core: ^2.21.0
   flutter:
