--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.1.2
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.12.1
