--- a/move_app/android/app/src/main/AndroidManifest.xml
+++ b/move_app/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,9 @@
         android:label="move_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
         <activity
+            android:usesCleartextTraffic="true"
             android:name=".MainActivity"
             android:exported="true"
             android:launchMode="singleTop"
@@ -18,12 +20,12 @@
                  while the Flutter UI initializes. After that, this theme continues
                  to determine the Window background behind the Flutter UI. -->
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme"
+            />
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
@@ -32,6 +34,6 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyByayPMzu3O6DWqH4UW-M04BF82DacG5WM"/>
+            android:value="AIzaSyByayPMzu3O6DWqH4UW-M04BF82DacG5WM" />
     </application>
 </manifest>
