--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_maps_flutter: ^2.5.0
   injectable: ^2.3.2
   permission_handler: ^11.0.1
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   build_runner: ^2.4.6
