--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^2.3.2
   permission_handler: ^11.0.1
   pin_code_fields: ^8.0.1
+  uuid: ^4.2.1
 
 dev_dependencies:
   build_runner: ^2.4.6
