--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_app_check: ^0.2.1+4
   firebase_auth: ^4.12.1
   firebase_core: ^2.21.0
+  firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.9
@@ -52,6 +53,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.4.1
+  mockito: ^5.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
