--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -37,11 +37,14 @@ dependencies:
   firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
+  flutter_keyboard_visibility: ^5.4.1
   flutter_svg: ^2.0.9
   get: ^4.6.6
   get_it: ^7.6.4
   google_fonts: ^6.1.0
   google_maps_flutter: ^2.5.0
+  http: ^1.1.0
+  image_picker: ^1.0.4
   injectable: ^2.3.2
   intl: ^0.18.1
   permission_handler: ^11.0.1
