--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animate_do: ^3.1.2
+  cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
   firebase_app_check: ^0.2.1+4
@@ -37,6 +38,7 @@ dependencies:
   firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.1
   flutter_keyboard_visibility: ^5.4.1
   flutter_svg: ^2.0.9
   get: ^4.6.6
