--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
+  file_picker: ^6.1.1
   firebase_app_check: ^0.2.1+4
   firebase_auth: ^4.12.1
   firebase_core: ^2.21.0
@@ -51,6 +52,7 @@ dependencies:
   intl: ^0.18.1
   permission_handler: ^11.0.1
   pin_code_fields: ^8.0.1
+  syncfusion_flutter_pdfviewer: ^23.1.44
   uuid: ^4.2.1
 
 dev_dependencies:
