--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.1
   flutter_svg: ^2.0.9
   get: ^4.6.6
+  get_storage: ^2.1.1
   get_it: ^7.6.4
   google_fonts: ^6.1.0
   google_maps_flutter: ^2.5.0
