--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -41,17 +41,18 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.3.1
   flutter_keyboard_visibility: ^5.4.1
+  flutter_map: ^6.1.0
   flutter_svg: ^2.0.9
+  geolocator: ^10.1.0
   get: ^4.6.6
-  get_storage: ^2.1.1
   get_it: ^7.6.4
+  get_storage: ^2.1.1
   google_fonts: ^6.1.0
-  google_maps_flutter: ^2.5.0
   http: ^1.1.0
   image_picker: ^1.0.4
   injectable: ^2.3.2
   intl: ^0.18.1
-  permission_handler: ^11.0.1
+  latlong2: ^0.9.0
   pin_code_fields: ^8.0.1
   syncfusion_flutter_pdfviewer: ^23.1.44
   uuid: ^4.2.1
