--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
+  currency_text_input_formatter: ^2.1.10
+  dio: ^5.4.0
+  dio_cache_interceptor: ^3.5.0
   file_picker: ^6.1.1
   firebase_app_check: ^0.2.1+4
   firebase_auth: ^4.12.1
