--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^5.2.1
   animate_do: ^3.1.2
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
@@ -82,6 +83,7 @@ flutter:
     - assets/images/
     - assets/logo/
     - assets/svg/
+    - assets/sounds/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
