--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   injectable: ^2.3.2
   intl: ^0.18.1
   latlong2: ^0.9.0
+  overlayment: ^0.2.1
   pin_code_fields: ^8.0.1
   sqflite: ^2.3.0
   syncfusion_flutter_pdfviewer: ^23.1.44
