--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,28 +1,45 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "move_app",
-            "cwd": "move_app",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "move_app (profile mode)",
-            "cwd": "move_app",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "move_app (release mode)",
-            "cwd": "move_app",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Current Device",
+      "request": "launch",
+      "type": "dart"
+    },
+    {
+      "name": "Emulator",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "emulator-5554"
+    },
+    {
+      "name": "Android 1",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "192.168.0.12:5000"
+    },
+    {
+      "name": "Android 2",
+      "request": "launch",
+      "type": "dart",
+      "deviceId": "ZE2237WSD2"
+    }
+  ],
+  "compounds": [
+    {
+      "name": "All Devices",
+      "configurations": ["Emulator", "Android 1", "Android 2"]
+    },
+    {
+      "name": "Only Android",
+      "configurations": ["Android 1", "Android 2"]
+    },
+    {
+      "name": "Only Emulator and Android 2",
+      "configurations": ["Emulator", "Android 2"]
+    }
+  ]
 }
