--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^23.1.44
   url_launcher: ^6.2.1
   uuid: ^4.2.1
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   build_runner: ^2.4.6
