--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -2,7 +2,7 @@ name: move_app
 description:
 publish_to: "none"
 
-version: 1.0.1+5
+version: 1.0.2-beta1+7
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
