--- a/move_app/pubspec.yaml
+++ b/move_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: move_app
-description:
+description: null
 publish_to: "none"
 
 version: 1.0.2-beta1.2.2+16
@@ -8,8 +8,8 @@ environment:
   sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
-  audioplayers: ^5.2.1
   animate_do: ^3.1.2
+  audioplayers: ^5.2.1
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
   cupertino_icons: ^1.0.2
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   flutter_cache_manager: ^3.3.1
   flutter_keyboard_visibility: ^5.4.1
+  flutter_local_notifications: ^16.2.0
   flutter_map: ^6.1.0
   flutter_svg: ^2.0.9
   geolocator: ^10.1.0
@@ -44,7 +45,6 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^23.1.44
   url_launcher: ^6.2.1
   uuid: ^4.2.1
-  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   build_runner: ^2.4.6
