Adding Connection Ctrl

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -61,10 +61,10 @@ android {
 
     signingConfigs{
         release {
-            keyAlias keyStoreProperties['keyAlias']
-            keyPassword keyStoreProperties['keyPassword']
-            storeFile file(keyStoreProperties['storeFile'])
-            storePassword keyStoreProperties['storePassword']
+            // keyAlias keyStoreProperties['keyAlias']
+            // keyPassword keyStoreProperties['keyPassword']
+            // storeFile file(keyStoreProperties['storeFile'])
+            // storePassword keyStoreProperties['storePassword']
         }
     }
     buildTypes {
