--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   audioplayers: ^5.2.1
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
+  connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   currency_text_input_formatter: ^2.1.10
   dio: ^5.4.0
