--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -45,7 +45,7 @@
             "name": "Real Device",
             "request": "launch",
             "type": "dart",
-            "deviceId": "192.168.4.205:5000",
+            "deviceId": "108648820409",
         }
     ],
     "compounds": [
