--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_keyboard_visibility: ^5.4.1
   flutter_local_notifications: ^16.2.0
   flutter_map: ^6.1.0
+  flutter_rating_bar: ^4.0.1
   flutter_svg: ^2.0.9
   geolocator: ^10.1.0
   get: ^4.6.6
