Update VSCode settings and add cSpell words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "cmake.sourceDirectory": "C:/Users/ASESORADMIN/Desktop/Move/linux"
+  "cmake.sourceDirectory": "C:/Users/ASESORADMIN/Desktop/Move/linux",
+  "cSpell.words": ["firstname", "lastname", "montserrat", "RGBO", "uuid"]
 }
