--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mevo
-description: null
+description: "A new Flutter project."
 publish_to: "none"
 
 version: 1.0.2-beta1.2.2+10
@@ -9,7 +9,7 @@ environment:
 
 dependencies:
   animate_do: ^3.1.2
-  audioplayers: ^5.2.1
+  audioplayers: ^6.1.0
   cached_network_image: ^3.3.0
   cloud_firestore: ^4.12.2
   connectivity_plus: ^5.0.2
